packages/next-swc/crates/core/tests/errors/server-actions/4/output.js
/* __next_internal_action_entry_do_not_use__  */ export default class Component {
  render() {
    return null;
}
}